--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -1,2 +1,100 @@
-<!-- Main Template with template literal -->
+<!doctype html>
+<html lang="en">
 
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"/>
+    <title>Team Profile</title>
+</head>
+
+<body>
+    <nav class="navbar navbar-light bg-danger py-5">
+        <h1 class="navbar-text text-white mx-auto">My Team</h1>
+    </nav>
+    <div class="container">
+        <div class="row row-cols-3 my-5">
+        <div class="col">
+    <div class="shadow card mt-5">
+        <div class="card-header text-white bg-primary ml-0">
+            <h2 class="card-title">miao</h2>
+            <h5 class="card-text"><i class="fas fa-mug-hot"></i>&nbsp;Manager</h5>
+        </div>
+        <div class="card-body bg-light mt-3 mb-3">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 1</li>
+                <li class="list-group-item">Email: miao@mmm.com</li>
+                <li class="list-group-item">Office number: 555</li>
+            </ul>
+        </div>
+    </div>
+</div> <div class="col">
+    <div class="shadow card mt-5">
+        <div class="card-header text-white bg-primary ml-0">
+            <h2 class="card-title">2</h2>
+            <h5 class="card-text"><i class="fas fa-laptop-code"></i>&nbsp;Engineer</h5>
+        </div>
+        <div class="card-body bg-light mt-3 mb-3">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 12</li>
+                <li class="list-group-item">Email: jash@hhh.com</li>
+                <li class="list-group-item">GitHub: miao1888</li>
+            </ul>
+        </div>
+    </div>
+</div> <div class="col">
+    <div class="shadow card mt-5">
+        <div class="card-header text-white bg-primary ml-0">
+            <h2 class="card-title">jong</h2>
+            <h5 class="card-text"><i class="fas fa-laptop-code"></i>&nbsp;Engineer</h5>
+        </div>
+        <div class="card-body bg-light mt-3 mb-3">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 4</li>
+                <li class="list-group-item">Email: jj@hhhh.com</li>
+                <li class="list-group-item">GitHub: jing10000</li>
+            </ul>
+        </div>
+    </div>
+</div> <div class="col">
+    <div class="shadow card mt-5">
+        <div class="card-header text-white bg-primary ml-0">
+            <h2 class="card-title">matt</h2>
+            <h5 class="card-text"><i class="fas fa-user-graduate"></i>&nbsp;Intern</h5>
+        </div>
+        <div class="card-body bg-light mt-3 mb-3">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 3</li>
+                <li class="list-group-item">Email: matt@jjjj.com</li>
+                <li class="list-group-item">School: cc uni</li>
+            </ul>
+        </div>
+    </div>
+</div>
+        </div>
+    </div>
+    
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
+
+
+
+</body>
+
+</html>
