add comments to app.js

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -26,50 +26,22 @@
         <div class="card-body bg-light mt-3 mb-3">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">ID: 1</li>
-                <li class="list-group-item">Email: miao@mmm.com</li>
-                <li class="list-group-item">Office number: 555</li>
+                <li class="list-group-item">Email: mmm@hotmail.com</li>
+                <li class="list-group-item">Office number: 111</li>
             </ul>
         </div>
     </div>
 </div> <div class="col">
     <div class="shadow card mt-5">
         <div class="card-header text-white bg-primary ml-0">
-            <h2 class="card-title">2</h2>
+            <h2 class="card-title">josh</h2>
             <h5 class="card-text"><i class="fas fa-laptop-code"></i>&nbsp;Engineer</h5>
         </div>
         <div class="card-body bg-light mt-3 mb-3">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 12</li>
-                <li class="list-group-item">Email: jash@hhh.com</li>
-                <li class="list-group-item">GitHub: miao1888</li>
-            </ul>
-        </div>
-    </div>
-</div> <div class="col">
-    <div class="shadow card mt-5">
-        <div class="card-header text-white bg-primary ml-0">
-            <h2 class="card-title">jong</h2>
-            <h5 class="card-text"><i class="fas fa-laptop-code"></i>&nbsp;Engineer</h5>
-        </div>
-        <div class="card-body bg-light mt-3 mb-3">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 4</li>
-                <li class="list-group-item">Email: jj@hhhh.com</li>
-                <li class="list-group-item">GitHub: jing10000</li>
-            </ul>
-        </div>
-    </div>
-</div> <div class="col">
-    <div class="shadow card mt-5">
-        <div class="card-header text-white bg-primary ml-0">
-            <h2 class="card-title">matt</h2>
-            <h5 class="card-text"><i class="fas fa-user-graduate"></i>&nbsp;Intern</h5>
-        </div>
-        <div class="card-body bg-light mt-3 mb-3">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 3</li>
-                <li class="list-group-item">Email: matt@jjjj.com</li>
-                <li class="list-group-item">School: cc uni</li>
+                <li class="list-group-item">ID: 2</li>
+                <li class="list-group-item">Email: josh@hotmail.com</li>
+                <li class="list-group-item">GitHub: miao0009</li>
             </ul>
         </div>
     </div>
