add assets file

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -20,28 +20,56 @@
         <div class="col">
     <div class="shadow card mt-5">
         <div class="card-header text-white bg-primary ml-0">
-            <h2 class="card-title">miao</h2>
+            <h2 class="card-title">Jared</h2>
             <h5 class="card-text"><i class="fas fa-mug-hot"></i>&nbsp;Manager</h5>
         </div>
         <div class="card-body bg-light mt-3 mb-3">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">ID: 1</li>
-                <li class="list-group-item">Email: mmm@hotmail.com</li>
-                <li class="list-group-item">Office number: 111</li>
+                <li class="list-group-item">Email: jared@fakemail.com</li>
+                <li class="list-group-item">Office number: 123</li>
             </ul>
         </div>
     </div>
 </div> <div class="col">
     <div class="shadow card mt-5">
         <div class="card-header text-white bg-primary ml-0">
-            <h2 class="card-title">josh</h2>
+            <h2 class="card-title">Jeff </h2>
             <h5 class="card-text"><i class="fas fa-laptop-code"></i>&nbsp;Engineer</h5>
         </div>
         <div class="card-body bg-light mt-3 mb-3">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">ID: 2</li>
-                <li class="list-group-item">Email: josh@hotmail.com</li>
-                <li class="list-group-item">GitHub: miao0009</li>
+                <li class="list-group-item">Email: miao188@hotmail.com</li>
+                <li class="list-group-item">GitHub: miao0007</li>
+            </ul>
+        </div>
+    </div>
+</div> <div class="col">
+    <div class="shadow card mt-5">
+        <div class="card-header text-white bg-primary ml-0">
+            <h2 class="card-title">Tammer</h2>
+            <h5 class="card-text"><i class="fas fa-laptop-code"></i>&nbsp;Engineer</h5>
+        </div>
+        <div class="card-body bg-light mt-3 mb-3">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 3</li>
+                <li class="list-group-item">Email: tammer@fakemail.com</li>
+                <li class="list-group-item">GitHub: tam0001</li>
+            </ul>
+        </div>
+    </div>
+</div> <div class="col">
+    <div class="shadow card mt-5">
+        <div class="card-header text-white bg-primary ml-0">
+            <h2 class="card-title">Alec</h2>
+            <h5 class="card-text"><i class="fas fa-user-graduate"></i>&nbsp;Intern</h5>
+        </div>
+        <div class="card-body bg-light mt-3 mb-3">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 4</li>
+                <li class="list-group-item">Email: alec@fakemail.com</li>
+                <li class="list-group-item">School: Adelaide Uni</li>
             </ul>
         </div>
     </div>
