--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -25,9 +25,9 @@
         </div>
         <div class="card-body bg-light mt-3 mb-3">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 1</li>
-                <li class="list-group-item">Email: jared@fakemail.com</li>
-                <li class="list-group-item">Office number: 123</li>
+                <li class="list-group-item"><b>ID:</b> 1</li>
+                <li class="list-group-item"><b>Email:</b> jared@fakemail.com</li>
+                <li class="list-group-item"><b>Office number:</b> 123</li>
             </ul>
         </div>
     </div>
@@ -39,9 +39,9 @@
         </div>
         <div class="card-body bg-light mt-3 mb-3">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 2</li>
-                <li class="list-group-item">Email: miao188@hotmail.com</li>
-                <li class="list-group-item">GitHub: miao0007</li>
+                <li class="list-group-item"><b>ID:</b> 2</li>
+                <li class="list-group-item"><b>Email:</b> miao188@hotmail.com</li>
+                <li class="list-group-item"><b>GitHub:</b> miao0007</li>
             </ul>
         </div>
     </div>
@@ -49,27 +49,13 @@
     <div class="shadow card mt-5">
         <div class="card-header text-white bg-primary ml-0">
             <h2 class="card-title">Tammer</h2>
-            <h5 class="card-text"><i class="fas fa-laptop-code"></i>&nbsp;Engineer</h5>
-        </div>
-        <div class="card-body bg-light mt-3 mb-3">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 3</li>
-                <li class="list-group-item">Email: tammer@fakemail.com</li>
-                <li class="list-group-item">GitHub: tam0001</li>
-            </ul>
-        </div>
-    </div>
-</div> <div class="col">
-    <div class="shadow card mt-5">
-        <div class="card-header text-white bg-primary ml-0">
-            <h2 class="card-title">Alec</h2>
             <h5 class="card-text"><i class="fas fa-user-graduate"></i>&nbsp;Intern</h5>
         </div>
         <div class="card-body bg-light mt-3 mb-3">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 4</li>
-                <li class="list-group-item">Email: alec@fakemail.com</li>
-                <li class="list-group-item">School: Adelaide Uni</li>
+                <li class="list-group-item"><b>ID:</b> 3</li>
+                <li class="list-group-item"><b>Email:</b> tam@fakemail.com</li>
+                <li class="list-group-item"><b>School:</b> Adelaide Uni</li>
             </ul>
         </div>
     </div>
