update the card content format

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -26,7 +26,7 @@
         <div class="card-body bg-light mt-3 mb-3">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><b>ID:</b> 1</li>
-                <li class="list-group-item"><b>Email:</b> jared@fakemail.com</li>
+                <li class="list-group-item"><b>Email: </b><a href="mailto:jared@fakemail.com">jared@fakemail.com</a></li>
                 <li class="list-group-item"><b>Office number:</b> 123</li>
             </ul>
         </div>
@@ -34,27 +34,41 @@
 </div> <div class="col">
     <div class="shadow card mt-5">
         <div class="card-header text-white bg-primary ml-0">
-            <h2 class="card-title">Jeff </h2>
+            <h2 class="card-title">Tammer</h2>
             <h5 class="card-text"><i class="fas fa-laptop-code"></i>&nbsp;Engineer</h5>
         </div>
         <div class="card-body bg-light mt-3 mb-3">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><b>ID:</b> 2</li>
-                <li class="list-group-item"><b>Email:</b> miao188@hotmail.com</li>
-                <li class="list-group-item"><b>GitHub:</b> miao0007</li>
+                <li class="list-group-item"><b>Email:</b><a href="mailto:tammer@fakemail.com">tammer@fakemail.com</a></li>
+                <li class="list-group-item"><b>GitHub:</b><a href="https://github.com/tammy0009" target="_blank" rel="noopener noreferrer">tammy0009</a></li>
             </ul>
         </div>
     </div>
 </div> <div class="col">
     <div class="shadow card mt-5">
         <div class="card-header text-white bg-primary ml-0">
-            <h2 class="card-title">Tammer</h2>
-            <h5 class="card-text"><i class="fas fa-user-graduate"></i>&nbsp;Intern</h5>
+            <h2 class="card-title">Jeff</h2>
+            <h5 class="card-text"><i class="fas fa-laptop-code"></i>&nbsp;Engineer</h5>
         </div>
         <div class="card-body bg-light mt-3 mb-3">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><b>ID:</b> 3</li>
-                <li class="list-group-item"><b>Email:</b> tam@fakemail.com</li>
+                <li class="list-group-item"><b>Email:</b><a href="mailto:miao188@hotmail.com">miao188@hotmail.com</a></li>
+                <li class="list-group-item"><b>GitHub:</b><a href="https://github.com/miao0007" target="_blank" rel="noopener noreferrer">miao0007</a></li>
+            </ul>
+        </div>
+    </div>
+</div> <div class="col">
+    <div class="shadow card mt-5">
+        <div class="card-header text-white bg-primary ml-0">
+            <h2 class="card-title">Alec</h2>
+            <h5 class="card-text"><i class="fas fa-user-graduate"></i>&nbsp;Intern</h5>
+        </div>
+        <div class="card-body bg-light mt-3 mb-3">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item"><b>ID:</b> 4</li>
+                <li class="list-group-item"><b>Email:</b> <a href="mailto:alec@fakemail.com">alec@fakemail.com</a></li>
                 <li class="list-group-item"><b>School:</b> Adelaide Uni</li>
             </ul>
         </div>
