update card content format

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -40,8 +40,8 @@
         <div class="card-body bg-light mt-3 mb-3">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><b>ID:</b> 2</li>
-                <li class="list-group-item"><b>Email:</b><a href="mailto:tammer@fakemail.com">tammer@fakemail.com</a></li>
-                <li class="list-group-item"><b>GitHub:</b><a href="https://github.com/tammy0009" target="_blank" rel="noopener noreferrer">tammy0009</a></li>
+                <li class="list-group-item"><b>Email: </b><a href="mailto:tammy@fakemail.com">tammy@fakemail.com</a></li>
+                <li class="list-group-item"><b>GitHub: </b><a href="https://github.com/tam0008" target="_blank" rel="noopener noreferrer">tam0008</a></li>
             </ul>
         </div>
     </div>
@@ -54,8 +54,8 @@
         <div class="card-body bg-light mt-3 mb-3">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><b>ID:</b> 3</li>
-                <li class="list-group-item"><b>Email:</b><a href="mailto:miao188@hotmail.com">miao188@hotmail.com</a></li>
-                <li class="list-group-item"><b>GitHub:</b><a href="https://github.com/miao0007" target="_blank" rel="noopener noreferrer">miao0007</a></li>
+                <li class="list-group-item"><b>Email: </b><a href="mailto:miao188@hotmail.com">miao188@hotmail.com</a></li>
+                <li class="list-group-item"><b>GitHub: </b><a href="https://github.com/miao0007" target="_blank" rel="noopener noreferrer">miao0007</a></li>
             </ul>
         </div>
     </div>
