modified joi function

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -20,13 +20,13 @@
         <div class="col">
     <div class="shadow card mt-5">
         <div class="card-header text-white bg-primary ml-0">
-            <h2 class="card-title">Jared</h2>
+            <h2 class="card-title">1</h2>
             <h5 class="card-text"><i class="fas fa-mug-hot"></i>&nbsp;Manager</h5>
         </div>
         <div class="card-body bg-light mt-3 mb-3">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item"><b>ID:</b> 1</li>
-                <li class="list-group-item"><b>Email: </b><a href="mailto:jared@fakemail.com">jared@fakemail.com</a></li>
+                <li class="list-group-item"><b>ID:</b> 123</li>
+                <li class="list-group-item"><b>Email: </b><a href="mailto:mmm@jjj.com">mmm@jjj.com</a></li>
                 <li class="list-group-item"><b>Office number:</b> 123</li>
             </ul>
         </div>
@@ -34,42 +34,14 @@
 </div> <div class="col">
     <div class="shadow card mt-5">
         <div class="card-header text-white bg-primary ml-0">
-            <h2 class="card-title">Tammer</h2>
+            <h2 class="card-title">jeff </h2>
             <h5 class="card-text"><i class="fas fa-laptop-code"></i>&nbsp;Engineer</h5>
         </div>
         <div class="card-body bg-light mt-3 mb-3">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><b>ID:</b> 2</li>
-                <li class="list-group-item"><b>Email: </b><a href="mailto:tammy@fakemail.com">tammy@fakemail.com</a></li>
-                <li class="list-group-item"><b>GitHub: </b><a href="https://github.com/tam0008" target="_blank" rel="noopener noreferrer">tam0008</a></li>
-            </ul>
-        </div>
-    </div>
-</div> <div class="col">
-    <div class="shadow card mt-5">
-        <div class="card-header text-white bg-primary ml-0">
-            <h2 class="card-title">Jeff</h2>
-            <h5 class="card-text"><i class="fas fa-laptop-code"></i>&nbsp;Engineer</h5>
-        </div>
-        <div class="card-body bg-light mt-3 mb-3">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item"><b>ID:</b> 3</li>
-                <li class="list-group-item"><b>Email: </b><a href="mailto:miao188@hotmail.com">miao188@hotmail.com</a></li>
+                <li class="list-group-item"><b>Email: </b><a href="mailto:miao188@hotail.com">miao188@hotail.com</a></li>
                 <li class="list-group-item"><b>GitHub: </b><a href="https://github.com/miao0007" target="_blank" rel="noopener noreferrer">miao0007</a></li>
-            </ul>
-        </div>
-    </div>
-</div> <div class="col">
-    <div class="shadow card mt-5">
-        <div class="card-header text-white bg-primary ml-0">
-            <h2 class="card-title">Alec</h2>
-            <h5 class="card-text"><i class="fas fa-user-graduate"></i>&nbsp;Intern</h5>
-        </div>
-        <div class="card-body bg-light mt-3 mb-3">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item"><b>ID:</b> 4</li>
-                <li class="list-group-item"><b>Email:</b> <a href="mailto:alec@fakemail.com">alec@fakemail.com</a></li>
-                <li class="list-group-item"><b>School:</b> Adelaide Uni</li>
             </ul>
         </div>
     </div>
